# barny

./: .clang-tidy  .clangd  .gitignore  LICENSE  README.md  meson.build  meson_options.txt
config/: barny-session.in  barny.conf  barny.service
docs/: battery-power-supplies.md
include/: barny.h  util.h
modules/btc_price/: Makefile  get_price.c  get_price.h  meson.build  structs.h  test.c  write_callback.h
modules/cpu_freq/: cpu_freqency.service  i3cpu_freq  meson.build
modules/cpu_power/: cpu_power.service  i3cpu_power  meson.build
modules/weather/: Makefile  get_location.c  get_weather.c  main.c  meson.build  write_callback.c
protocols/: wlr-layer-shell-unstable-v1.xml
scripts/: post-install.sh  run-clang-analyze.sh  run-clang-tidy.sh  run-clangd-check.sh  uninstall.sh
src/: config.c  main.c  meson.build  util.c
src/dbus/: dbus.c  dbusmenu.c  meson.build  sni_host.c  sni_watcher.c
src/editor/: main.c
src/ipc/: file_watch.c  meson.build  sway_ipc.c
src/modules/: battery.c  clock.c  cpu_temp.c  crypto.c  disk.c  fileread.c  layout.c  layout_apply.c  menu.c  meson.build  module.c  module_geom.c  network.c  popup.c  popup.h  ram.c  sysinfo.c  tray.c  weather.c  windowtitle.c  workspace.c
src/modules/helpers/: meson.build
src/modules/helpers/btc_price/: btc_price.service  main.c  meson.build
src/modules/helpers/common/: helper_util.c  helper_util.h
src/modules/helpers/cpu_freq/: cpu_freq.service  main.c  meson.build
src/modules/helpers/cpu_power/: 99-rapl-permissions.rules  cpu_power.service  main.c  meson.build
src/modules/helpers/crypto_prices/: crypto_prices.service  main.c  meson.build
src/modules/helpers/weather/: main.c  meson.build  weather.service
src/render/: glass.c  liquid_glass.c  meson.build  render.c
src/wayland/: client.c  layer_shell.c  meson.build
tests/: meson.build  test_barny_session.sh  test_clock_internals.c  test_config.c  test_config_internals.c  test_disk_internals.c  test_framework.h  test_internals_main.c  test_internals_stubs.c  test_ipc.c  test_liquid_glass.c  test_main.c  test_module_layout.c  test_modules.c  test_network_internals.c  test_new_modules.c  test_perf.c  test_ram_internals.c  test_stubs.c  test_tray_internals.c  test_workspace_internals.c
tests/fixtures/: test_config.conf
