# Module sources
barny_sources += files(
    'battery.c',
    'clock.c',
    'crypto.c',
    'disk.c',
    'fileread.c',
    'layout.c',
    'layout_apply.c',
    'menu.c',
    'module.c',
    'network.c',
    'popup.c',
    'ram.c',
    'sysinfo.c',
    'tray.c',
    'weather.c',
    'windowtitle.c',
    'workspace.c',
)
